Update jupyter notebook

--- a/user-user.ipynb
+++ b/user-user.ipynb
@@ -25,20 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4609"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "target_userid = 'A3Q4S5DFVPB70D'\n",
+    "target_userid = 'ALX2RTJW3NF0O'\n",
     "common_products = train_df[train_df.review_userid == target_userid].product_productid\n",
-    "userid_array = train_df[train_df.product_productid.isin(common_products)].review_userid.unique()"
+    "userid_array = train_df[train_df.product_productid.isin(common_products)].review_userid.unique()\n",
+    "len(userid_array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -60,11 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of users processed: 500\n",
+      "Number of users processed: 1000\n",
+      "Number of users processed: 1500\n",
+      "Number of users processed: 2000\n",
+      "Number of users processed: 2500\n",
+      "Number of users processed: 3000\n",
+      "Number of users processed: 3500\n",
+      "Number of users processed: 4000\n",
+      "Number of users processed: 4500\n"
+     ]
+    }
+   ],
    "source": [
     "result_sim = pd.Series()\n",
     "for index, userid in enumerate(userid_array):\n",
@@ -80,7 +108,103 @@
     "    # calculate the similarity and store the result\n",
     "    similarity = calc_sim(table[target_userid], table[userid])\n",
     "    result_sim.set_value(userid, similarity)\n",
+    "    if index > 0 and index % 500 == 0:\n",
+    "        print 'Number of users processed: %d' % index\n",
     "result_sim = result_sim.drop(target_userid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['B000063W1R', 'B000JGG6T4', 'B00004XPPG', 'B00061S0QE',\n",
+       "       '7883704591', 'B00004RRGB', 'B0007A2GTG', 'B00005R23Y'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df[test_df.review_userid == target_userid].product_productid.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A1JUUZAYZCFAI3    0.217597\n",
+       "A2PL4GB1S2Q5EK    0.106751\n",
+       "A258MSMKY2710V    0.099433\n",
+       "A1D2ZN57YG2NMH    0.053544\n",
+       "A1FNES0QEBJZD1    0.051649\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "productid = 'B00004XPPG'\n",
+    "rated_users = train_df[train_df.product_productid == productid].review_userid.unique()\n",
+    "knn = result_sim.get(rated_users).sort_values(ascending=False)[:k].fillna(0)\n",
+    "knn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A1JUUZAYZCFAI3    0.411357\n",
+       "A2PL4GB1S2Q5EK    0.201807\n",
+       "A258MSMKY2710V    0.187973\n",
+       "A1D2ZN57YG2NMH    0.101222\n",
+       "A1FNES0QEBJZD1    0.097641\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim_weights = knn / knn.sum()\n",
+    "sim_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_user_ratings(df, knn):\n",
+    "    s = pd.Series(data=df.review_score.values, index=df.review_userid)\n",
+    "    return s.loc[knn.index]"
    ]
   },
   {
@@ -89,41 +213,34 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "productid = 'B00006HAXW'\n",
-    "rated_users = train_df[train_df.product_productid == productid].review_userid.unique()\n",
-    "knn = result_sim.get(rated_users).sort_values(ascending=False)[:k].fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['AD4CDZK7D31XP', 'A3Q4S5DFVPB70D', 'A2P7UB02HAVEPB',\n",
-       "       'A2TX99AZKDK0V7', 'A1FRPGQYQTAOR1', 'A1RSDE90N6RSZF',\n",
-       "       'A1OUBOGB5970AO', 'A3NPHQVIY59Y0Y', 'AFKMBAY28XO8A',\n",
-       "       'A66KMXH9V7OGU', 'AFJ27ZV9183B8', 'AXMKAXC0TR9AW'], dtype=object)"
+       "review_userid\n",
+       "A1JUUZAYZCFAI3    5\n",
+       "A2PL4GB1S2Q5EK    3\n",
+       "A2PL4GB1S2Q5EK    5\n",
+       "A258MSMKY2710V    4\n",
+       "A1D2ZN57YG2NMH    5\n",
+       "A1FNES0QEBJZD1    5\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "userid_array"
+    "product_df = train_df[train_df.product_productid == productid]\n",
+    "user_ratings = get_user_ratings(product_df, knn)\n",
+    "user_ratings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -145,11 +262,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6757142</th>\n",
-       "      <td>B00006HB30</td>\n",
-       "      <td>A3Q4S5DFVPB70D</td>\n",
-       "      <td>Joseph P. Aiello</td>\n",
-       "      <td>26/26</td>\n",
+       "      <th>1692271</th>\n",
+       "      <td>B00004XPPG</td>\n",
+       "      <td>A2PL4GB1S2Q5EK</td>\n",
+       "      <td>Deborah G. Hall</td>\n",
+       "      <td>2/2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1692294</th>\n",
+       "      <td>B00004XPPG</td>\n",
+       "      <td>A2PL4GB1S2Q5EK</td>\n",
+       "      <td>Deborah G. Hall</td>\n",
+       "      <td>7/13</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -158,24 +283,26 @@
       ],
       "text/plain": [
        "        product_productid   review_userid review_profilename  \\\n",
-       "6757142        B00006HB30  A3Q4S5DFVPB70D   Joseph P. Aiello   \n",
+       "1692271        B00004XPPG  A2PL4GB1S2Q5EK    Deborah G. Hall   \n",
+       "1692294        B00004XPPG  A2PL4GB1S2Q5EK    Deborah G. Hall   \n",
        "\n",
        "        review_helpfulness  review_score  \n",
-       "6757142              26/26             5  "
+       "1692271                2/2             3  \n",
+       "1692294               7/13             5  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df[train_df.review_userid == target_userid]"
+    "product_df[product_df.review_userid == 'A2PL4GB1S2Q5EK']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -188,20 +315,28 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>product_productid</th>\n",
-       "      <th>review_userid</th>\n",
-       "      <th>review_profilename</th>\n",
-       "      <th>review_helpfulness</th>\n",
        "      <th>review_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>B00006HAXW</td>\n",
-       "      <td>A3Q4S5DFVPB70D</td>\n",
-       "      <td>Joseph P. Aiello</td>\n",
-       "      <td>26/26</td>\n",
+       "      <th>A1JUUZAYZCFAI3</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A2PL4GB1S2Q5EK</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A258MSMKY2710V</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A1D2ZN57YG2NMH</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A1FNES0QEBJZD1</th>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -209,20 +344,45 @@
        "</div>"
       ],
       "text/plain": [
-       "  product_productid   review_userid review_profilename review_helpfulness  \\\n",
-       "0        B00006HAXW  A3Q4S5DFVPB70D   Joseph P. Aiello              26/26   \n",
-       "\n",
-       "   review_score  \n",
-       "0             5  "
+       "                review_score\n",
+       "A1JUUZAYZCFAI3             5\n",
+       "A2PL4GB1S2Q5EK             4\n",
+       "A258MSMKY2710V             4\n",
+       "A1D2ZN57YG2NMH             5\n",
+       "A1FNES0QEBJZD1             5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_df[test_df.review_userid == target_userid]"
+    "user_ratings = product_df.groupby('review_userid').mean().loc[knn.index]\n",
+    "user_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "review_score    4.61022\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim_weights.dot(user_ratings)"
    ]
   }
  ],
