Clean up playground dir

--- a/playground/user-user.ipynb
+++ b/playground/user-user.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
     "from scipy import spatial\n",
     "\n",
     "number_of_data_sets = 10\n",
-    "data_sets_dir = 'data/sets/'\n",
+    "data_sets_dir = '../data/sets/'\n",
     "k = 5\n",
     "\n",
     "i = 0\n",
