--- a/playground/item-item.ipynb
+++ b/playground/item-item.ipynb
@@ -22,7 +22,7 @@
     "from scipy import spatial\n",
     "\n",
     "number_of_data_sets = 1\n",
-    "data_sets_dir = 'data/sets/'\n",
+    "data_sets_dir = '../data/sets/'\n",
     "k = 5\n",
     "\n",
     "################################################################################\n",
